--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <body>
     <!-- TODO: ADD HTML FOR WHATEVER YOU WANT TO SHOW ON THE PAGE!  -->
+  <div id="plants"></div>
   </body>
   <script src="app.js"></script>
 </html>
